# htoprs

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
completions/: _htoprs
docs/: PARITY.md  PORT.md  index.html  port_report.html  report.html
man/man1/: htoprs.1  htoprsall.1
scripts/: gen_port_report.py  gen_port_stubs.py
src/: lib.rs  main.rs
src/extensions/: aggregate.rs  alerts.rs  barstyle.rs  braille.rs  bridge.rs  colors.rs  crashlog.rs  export.rs  filter.rs  finder.rs  forecast.rs  frame.rs  graph.rs  help.rs  mod.rs  model.rs  overlay.rs  panels.rs  prefs.rs  procring.rs  snapshot.rs  theme.rs
src/ported/: action.rs  affinity.rs  affinitypanel.rs  availablecolumnspanel.rs  availablemeterspanel.rs  backtracescreen.rs  batterymeter.rs  categoriespanel.rs  colorspanel.rs  columnspanel.rs  commandline.rs  commandscreen.rs  cpumeter.rs  crt.rs  datetimemeter.rs  diskiometer.rs  displayoptionspanel.rs  dynamiccolumn.rs  dynamicmeter.rs  dynamicscreen.rs  envscreen.rs  filedescriptormeter.rs  functionbar.rs  gpumeter.rs  hashtable.rs  header.rs  headeroptionspanel.rs  history.rs  hostnamemeter.rs  htop.rs  incset.rs  infoscreen.rs  lineeditor.rs  listitem.rs  loadaveragemeter.rs  machine.rs  mainpanel.rs  memorymeter.rs  memoryswapmeter.rs  meter.rs  (+29 more)
src/ported/darwin/: darwinmachine.rs  darwinprocess.rs  darwinprocesstable.rs  mod.rs  platform.rs  platformhelpers.rs
src/ported/dragonflybsd/: dragonflybsdmachine.rs  dragonflybsdprocess.rs  dragonflybsdprocesstable.rs  mod.rs  platform.rs
src/ported/freebsd/: freebsdmachine.rs  freebsdprocess.rs  freebsdprocesstable.rs  mod.rs  platform.rs
src/ported/generic/: demangle.rs  fdstat_sysctl.rs  gettime.rs  mod.rs  openzfs_sysctl.rs  uname.rs  unwindptrace.rs
src/ported/linux/: cgrouputils.rs  compat.rs  gpu.rs  hugepagemeter.rs  ioprioritypanel.rs  libnl.rs  libsensors.rs  linuxmachine.rs  linuxprocess.rs  linuxprocesstable.rs  mod.rs  openrcmeter.rs  platform.rs  pressurestallmeter.rs  selinuxmeter.rs  systemdmeter.rs  zrammeter.rs
src/ported/netbsd/: mod.rs  netbsdmachine.rs  netbsdprocess.rs  netbsdprocesstable.rs  platform.rs
src/ported/openbsd/: mod.rs  openbsdmachine.rs  openbsdprocess.rs  openbsdprocesstable.rs  platform.rs
src/ported/pcp/: indomtable.rs  instance.rs  metric.rs  mod.rs  pcpdynamiccolumn.rs  pcpdynamicmeter.rs  pcpdynamicscreen.rs  pcpmachine.rs  pcpprocess.rs  pcpprocesstable.rs  platform.rs  pmapi.rs
src/ported/solaris/: mod.rs  platform.rs  solarismachine.rs  solarisprocess.rs  solarisprocesstable.rs
src/ported/unsupported/: mod.rs  platform.rs  unsupportedmachine.rs  unsupportedprocess.rs  unsupportedprocesstable.rs
tests/data/: extract_c_fn_names.sh  fake_fn_allowlist.txt  htop_c_fn_names.txt
tests/parity/: cli_parity.rs  harness.rs  main.rs  xutils_parity.rs
tests/parity/cref/: config.h  htop_cref.c
