[package]
name = "htoprs"
version = "0.5.2"
edition = "2021"
description = "A faithful Rust port of htop — the interactive process viewer"
license = "GPL-2.0-or-later"
authors = ["MenkeTechnologies"]
repository = "https://github.com/MenkeTechnologies/htoprs"
homepage = "https://menketechnologies.github.io/htoprs/"
documentation = "https://docs.rs/htoprs"
readme = "README.md"
keywords = ["htop", "process", "monitor", "top", "terminal"]
categories = ["command-line-utilities"]

[lib]
name = "htoprs"
path = "src/lib.rs"

[[bin]]
name = "htoprs"
path = "src/main.rs"

# Parity suite: run the reference htop (C original, 3.5.x) and htoprs on the
# same inputs and diff the output. Cargo does not auto-discover files under
# tests/parity/, so this aggregator file is the single registered target.
# Run: `cargo test --test parity`  (see tests/parity/main.rs).
[[test]]
name = "parity"
path = "tests/parity/main.rs"

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"
nix = "0.31.3"
unicode-width = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
# Extensions-only: the themed help overlay / chooser / editor render into a
# ratatui Buffer. default-features off so ratatui pulls no terminal backend
# (and therefore no second crossterm) — htoprs drives the terminal via its own
# crossterm 0.29 directly.
ratatui = { version = "0.30.0", default-features = false, features = ["std"] }
# Extensions-only: persist the selected theme to ~/.config/htoprs/prefs.json.
serde_json = "1.0"
# Extensions-only: regex matching for the saved-filters extension
# (extensions::filter). Foundational crate, vendorable and durable.
regex = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libmedium = "0.13.4"
# Linux-only: pure-Rust generic-netlink client used by the delay-accounting
# port (linux/LibNl.c) to query the kernel TASKSTATS family. No FFI/dlopen —
# neli speaks the netlink wire protocol directly over an AF_NETLINK socket.
neli = "0.6"
# Linux-only: pure-Rust systemd D-Bus client for the SystemdMeter port
# (linux/SystemdMeter.c updateViaLib). No FFI/dlopen — zbus speaks the D-Bus
# wire protocol directly over the system/session bus socket. The blocking
# module mirrors htop's synchronous sd-bus property reads.
zbus = "5"
