[package]
name = "htoprs"
version = "0.5.5"
edition = "2021"
description = "A faithful Rust port of htop — the interactive process viewer"
license = "GPL-2.0-or-later"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
repository = "https://github.com/MenkeTechnologies/htoprs"
homepage = "https://menketechnologies.github.io/htoprs/"
documentation = "https://docs.rs/htoprs"
readme = "README.md"
keywords = ["htop", "process", "monitor", "top", "terminal"]
categories = ["command-line-utilities"]

[lib]
name = "htoprs"
path = "src/lib.rs"

[[bin]]
name = "htoprs"
path = "src/main.rs"

# Parity suite: run the reference htop (C original, 3.5.x) and htoprs on the
# same inputs and diff the output. Cargo does not auto-discover files under
# tests/parity/, so this aggregator file is the single registered target.
# Run: `cargo test --test parity`  (see tests/parity/main.rs).
[[test]]
name = "parity"
path = "tests/parity/main.rs"

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"
nix = "0.31.3"
unicode-width = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
# Extensions-only: the themed help overlay / chooser / editor render into a
# ratatui Buffer. default-features off so ratatui pulls no terminal backend
# (and therefore no second crossterm) — htoprs drives the terminal via its own
# crossterm 0.29 directly.
ratatui = { version = "0.30.0", default-features = false, features = ["std"] }
# Extensions-only: persist the selected theme to ~/.config/htoprs/prefs.json.
serde_json = "1.0"
# Extensions-only: regex matching for the saved-filters extension
# (extensions::filter). Foundational crate, vendorable and durable.
regex = "1"

[features]
# Faithful analog of htop's `./configure --enable-pcp` (HAVE_PCP) build variant:
# the Performance Co-Pilot platform backend (`src/ported/pcp/`). Off by default
# — like the tier-3 BSD backends it is verified by primary-source reading + the
# port-purity gate, not the default build. Its libpcp/pmapi surface is
# hand-declared in `extern` blocks (the DragonFly-kvm precedent), so the FFI-free
# leaf modules (PCPProcess) compile under `--features pcp` while the pmapi-linked
# modules stay read-verified.
pcp = []
# Faithful analog of htop's `HAVE_DEMANGLING` (`--enable-…` libiberty) build
# variant: C++/Rust symbol demangling for the backtrace screen (`generic/
# Demangle.c`). Off by default; its `cplus_demangle` (libiberty) surface is
# hand-declared, verified by primary-source reading + the port gate.
demangle = []
# Faithful analog of htop's `HAVE_LIBUNWIND_PTRACE` build variant: the
# libunwind-ptrace backtrace backend for the backtrace screen (`generic/
# UnwindPtrace.c`). Off by default; its libunwind/`_UPT_*` surface is
# hand-declared per-arch (x86_64/aarch64), verified by primary-source reading of
# the libunwind headers + the port gate (libunwind does not link on macOS).
unwind = []

[target.'cfg(target_os = "linux")'.dependencies]
libmedium = "0.13.4"
# Linux-only: pure-Rust generic-netlink client used by the delay-accounting
# port (linux/LibNl.c) to query the kernel TASKSTATS family. No FFI/dlopen —
# neli speaks the netlink wire protocol directly over an AF_NETLINK socket.
neli = "0.6"
# Linux-only: pure-Rust systemd D-Bus client for the SystemdMeter port
# (linux/SystemdMeter.c updateViaLib). No FFI/dlopen — zbus speaks the D-Bus
# wire protocol directly over the system/session bus socket. The blocking
# module mirrors htop's synchronous sd-bus property reads.
zbus = "5"
